<resources>
    <string name="app_name">AXS Lite</string>
    <string name="delivery_status_btn">Delivery Status</string>
    <string name="delivery_recipient_btn">Delivery Recipeint</string>
    <string name="delivery_to_btn">Delivered To</string>
    <string name="title_activity_delivery_status">DeliveryStatusActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_delivery_recipient">Delivery Recipient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="spinner_title">Select Company </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="signaturepad_act">SignaturePad</string>
    <string name="agreement">I acknowledge receipt of the count of goods and services performed. I also understand that No Claims will be accepted unless noted on this device.</string>
    <string name="clear_pad">Clear</string>
    <string name="save_signature">Save Signature</string>

    <string name="start_navi">START NAVIGATION</string>
    <string name="stop_navi">STOP NAVIGATION</string>
    <string name="engine_init_error">Map engine initialization</string>

</resources>