<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/delivery_status_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_status_btn" />

            <Button
                android:id="@+id/delivery_recipient_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_recipient_btn" />

            <Button
                android:id="@+id/delivery_to_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_to_btn" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>