<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:signature="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/buttons_container"
            android:id="@+id/signature_pad_container">

        <TextView
            android:id="@+id/signature_pad_description"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:textColor="#505050"
            android:layout_alignParentTop="true"
            android:text="@string/agreement" />

        <TextView
            android:id="@+id/signature_pad_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/signature_pad_description"
            android:text="Signature" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="160dp"
            android:layout_below="@+id/signature_pad_description"
            android:text="Date:" />

        <TextView
            android:id="@+id/signature_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="196dp"
            android:layout_below="@+id/signature_pad_description"
            android:text="04/24/2018 12:24" />


        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:foreground="#000"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"/>


        <com.github.gcacace.signaturepad.views.SignaturePad
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/signature_pad" />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clear_pad"
                android:enabled="false" />

        <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/save_signature"
                android:textColor="#000"
                android:enabled="false" />
    </LinearLayout>

</RelativeLayout>
